# mattermost-apps

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  package.json  pnpm-lock.yaml
demo/: BUILD.bazel
demo/server/: BUILD.bazel  plugin.go  plugin.json
demo/webapp/: BUILD.bazel
demo/webapp/src/: plugin.jsx
demo/webapp/src/components/root/: index.js
demo/webapp/src/components/user_actions/: index.js
demo/webapp/src/i18n/: en.json
demo2/: BUILD.bazel  plugin.json
demo2/server/: BUILD.bazel  README.md
demo2/webapp/: BUILD.bazel  jest.config.js
demo2/webapp/src/components/left_sidebar_header/: index.js
demo2/webapp/src/components/link_tooltip/: index.js
server/: BUILD.bazel
webapp/: BUILD.bazel  tsconfig.json
webapp/src/components/right_hand_sidebar/: index.js
webapp/src/components/router_showcase/: router_showcase.jsx
webapp/src/i18n/: es.json
