load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    "package.json",
])

npm_link_all_packages(name = "node_modules")

js_library(
    name = "package_json",
    srcs = ["package.json"],
    visibility = [
        "//demo/webapp:__pkg__",
        "//demo2/webapp:__pkg__",
    ],
)

# gazelle:prefix github.com/itstar-tech/mattermost-plugins-monorepo
gazelle(name = "gazelle")

filegroup(
    name = "all_plugins",
    srcs = [
        "//demo:plugin_bundle",
        "//demo2:plugin_bundle",
    ],
)
